# Lighting-and-Shading

./: CMakeLists.txt  README.md
cmake/modules/: HelperFunctions.cmake
res/: fshader.fs  fshader_depth.fs  fshader_light.fs  fshader_phong.fs  vshader.vs  vshader_depth.vs  vshader_light.vs  vshader_phong.vs
src/: gl_utils.cpp  gl_utils.h  main.cpp  shader_utils.cpp  shader_utils.h
